fixed issue with tags not working with null input

--- a/src/form-controls/dexih-form-input.component.html
+++ b/src/form-controls/dexih-form-input.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div> -->
     <label *ngIf="label" [for]="id" class="mt-1" >{{label}}
         <ng-content></ng-content>
     </label>
@@ -28,4 +28,4 @@
     <small *ngIf="note" class="form-text text-muted">
         <markdown (click)="sharedFunctions.getRoute($event)" [data]="note"></markdown>
     </small>
-</div>
+<!-- </div> -->
