--- a/src/widget/dexih-widget.component.html
+++ b/src/widget/dexih-widget.component.html
@@ -23,12 +23,14 @@
                             <input [formControl]="filterControl" type="text" placeholder="Filter the items">
                         </div>
                 </div>
+                    <button *ngIf="showExpandButton" type="button" class="close ml-2" (click)="isExpanded=!isExpanded" aria-label="Expand">
+                        <i *ngIf="!isExpanded" class="fa fa-angle-double-down" title="Collapse" ></i>
+                        <i *ngIf="isExpanded" class="fa fa-angle-double-up" title="Expand"></i>
+                    </button>
                     <button *ngIf="showCloseButton" type="button" class="close ml-2" (click)="doClose()" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-
-        
             </div>
         </div>
 
@@ -57,7 +59,7 @@
                     <div name="dexih-data-loading" class="table-loader-text">{{loadingMessage}}</div>
                 </div>
             </div>
-            <div *ngIf="showIf">
+            <div *ngIf="showIf" [@slideDown]="isExpanded ? 'show' : 'hide'">
                 <ng-content></ng-content>
             </div>
         </div>
