fine tune groups.

--- a/src/form-controls/dexih-form-input.component.html
+++ b/src/form-controls/dexih-form-input.component.html
@@ -1,4 +1,4 @@
-<!-- <div> -->
+<div>
     <label *ngIf="label" [for]="id" class="mt-1" >{{label}}
         <ng-content></ng-content>
     </label>
@@ -11,10 +11,11 @@
         </div>
 
         <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" (keydown)="keydownEvent($event)"
-            [type]="type" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength"
-            [ngClass]="{'border-top-0 border-bottom-0 border-left-0 rounded-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}" />
+            [type]="type" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength" 
+            [ngClass]="{'border-0 rounded-0  bg-transparent': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}" />
+        
         <div *ngIf="iconClass" class="input-group-append">
-            <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}" >
+            <span class="input-group-text"  [ngClass]="{'border-0 rounded-0 bg-transparent': !border}" >
                 <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
             </span>
         </div>
@@ -28,4 +29,4 @@
     <small *ngIf="note" class="form-text text-muted">
         <markdown (click)="sharedFunctions.getRoute($event)" [data]="note"></markdown>
     </small>
-<!-- </div> -->
+</div>
