--- a/src/form-controls/dexih-form-select.component.html
+++ b/src/form-controls/dexih-form-select.component.html
@@ -5,34 +5,33 @@
     </label>
     
     <div #dropdown dropdown [autoClose]="false" class="input-group" style="width: 100%" >
-            <div class="input-group" [id]="id" (click)="dropdownToggle()" style="width: 100%">
-                <div *ngIf="labelLeft" class="input-group-prepend">
-                    <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
-                </div>
-
-                <input 
-                    [attr.disabled]="((enableFilter && showDropDown) || enableTextEntry) ? null : ''" 
-                    [formControl]="manualControl" 
-                    [placeholder]="placeholder" 
-                    (keydown.arrowdown)="down()"
-                    (keydown.arrowup)="up()"
-                    (keyup.enter)="onTextEntryEnter($event)" 
-                    class="form-control bg-white disabled-input" 
-                    [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty, 'font-italic': !selectedItem && textValue }"
-                    (focusout)="dropdownHide()"
-                    />
-
-                <div class="input-group-append">
-                    <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
-                        <i *ngIf="showDropDown" class="icon-append fa fa-caret-down"></i>
-                        <i *ngIf="iconClass && (!items || items.length == 0) " class="icon-append {{iconClass}}"></i>
-                    </span>
-                </div>
-                <div *ngIf="errors" class="invalid-feedback">
-                        {{ errors }}
-                </div>
+        <div class="input-group" [id]="id" (click)="dropdownToggle()" style="width: 100%">
+            <div *ngIf="labelLeft" class="input-group-prepend">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0 bg-transparent': !border}"> {{labelLeft}}</span>
             </div>
 
+            <input 
+                [attr.disabled]="((enableFilter && showDropDown) || enableTextEntry) ? null : ''" 
+                [formControl]="manualControl" 
+                [placeholder]="placeholder" 
+                (keydown.arrowdown)="down()"
+                (keydown.arrowup)="up()"
+                (keyup.enter)="onTextEntryEnter($event)" 
+                class="form-control disabled-input bg-transparent" 
+                [ngClass]="{'border-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty, 'font-italic': !selectedItem && textValue }"
+                (focusout)="dropdownHide()"
+                />
+
+            <div class="input-group-append">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0 bg-transparent': !border}">
+                    <i *ngIf="showDropDown" class="icon-append fa fa-caret-down"></i>
+                    <i *ngIf="iconClass && (!items || items.length == 0) " class="icon-append {{iconClass}}"></i>
+                </span>
+            </div>
+            <div *ngIf="errors" class="invalid-feedback">
+                    {{ errors }}
+            </div>
+        </div>
 
         <ul *dropdownMenu  class="dropdown-menu scrollable-menu" role="menu" style="width:100%">
             <ng-template [ngIf]="showDropDown">
