--- a/src/form-controls/dexih-form-tags.component.html
+++ b/src/form-controls/dexih-form-tags.component.html
@@ -5,30 +5,28 @@
 
     <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
 
-    <div [ngClass]="{'border rounded': border, 'border-danger': errors, 'border-success': !errors && isDirty}">
-        <div class="input-group">
+        <div class="input-group m-0" [ngClass]="{ 'border rounded': border,  'border-danger': errors, 'border-success': !errors && isDirty}">
             <div *ngIf="labelLeft" class="input-group-prepend">
-                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+                <span class="input-group-text border-0" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
             </div>
-
     
-            <div *ngFor="let item of value" class="border rounded bg-light m-1">
+            <div *ngFor="let item of value" class="border rounded bg-light my-auto ml-1" >
                 {{item}}
                 <button (click)="remove(item)" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <input class="form-control border-0" [id]="id" [disabled]="disabled" [(ngModel)]="tag" (keydown)="keydownEvent($event)" [type]="type"
+            <input class="form-control border-0 bg-transparent" [id]="id" [disabled]="disabled" [(ngModel)]="tag" (keydown)="keydownEvent($event)" [type]="type"
                 [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength" [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}"
             />
+
             <div *ngIf="iconClass" class="input-group-append">
-                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0 bg-transparent': !border}">
                     <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
                 </span>
             </div>
 
         </div>
-    </div>
     <div *ngIf="errors" class="d-block invalid-feedback">
         {{ errors }}
     </div>
