--- a/src/form-controls/dexih-form-textarea.component.html
+++ b/src/form-controls/dexih-form-textarea.component.html
@@ -12,7 +12,7 @@
     <div [@slideDown]="isHidden ? 'hide' : 'show'">
         <div class="input-group">
             <div *ngIf="labelLeft" class="input-group-prepend">
-                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0 bg-transparent': !border}"> {{labelLeft}}</span>
             </div>
 
             <textarea class="form-control" [id]="id" [disabled]="disabled" [rows]="rows" [(ngModel)]="value"
