--- a/src/form-controls/dexih-form-input.component.html
+++ b/src/form-controls/dexih-form-input.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" (keydown)="keydownEvent($event)"
-            [type]="type" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength" 
+            [type]="type" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength" [autocapitalize]="autocapitalize"
             [ngClass]="{'border-0 rounded-0  bg-transparent': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}" />
         
         <div *ngIf="iconClass" class="input-group-append">
