--- a/src/form-controls/dexih-form-input.component.html
+++ b/src/form-controls/dexih-form-input.component.html
@@ -10,7 +10,7 @@
             <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
         </div>
 
-        <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" (keydown)="keydownEvent($event)"
+        <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged()" (keydown)="keydownEvent($event)"
             [type]="type" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength" [autocapitalize]="autocapitalize"
             [ngClass]="{'border-0 rounded-0  bg-transparent': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}" />
         
